[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Mikolaj Najda <mikolaj.najda@maastrichtuniversity.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
fastparquet = "^2024.2.0"
pyyaml = "^6.0.1"
pipreqs = "^0.5.0"
shap = "^0.46.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
