[tool.poetry]
name = "utilities"
version = "0.1.0"
description = ""
authors = ["Mikolaj Najda <mikolaj.najda@maastrichtuniversity.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
xgboost = "^2.0.3"
shap = "^0.45.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
